syntax = "proto3";


package order_management_service;

option go_package = "github.com/huydq/proto/gen-go/order-management-service;pbOrderMgmt";
option optimize_for = CODE_SIZE;

service OrderManagementService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (Order);
}

// Order Model
message Order {
  int32 id = 1;
  int32 customer_id = 2;
  double total_amount = 3;
  string status = 4;
  repeated OrderItem items = 5;
  string created_at = 6;
  string updated_at = 7;
}

// Order Item Model
message OrderItem {
  int32 id = 1;
  int32 order_id = 2;
  int32 product_id = 3;
  int32 quantity = 4;
  double price = 5;
}

// Order Request Payload
message CreateOrderRequest {
  int32 customer_id = 1;
  repeated OrderItemInput items = 2;
}

// Order Item Input (used when submitting an order)
message OrderItemInput {
  int32 product_id = 1;
  int32 quantity = 2;
}

// Order Response Payload
message CreateOrderResponse {
  int32 order_id = 1;
  string message = 2;
}

message GetOrderRequest {
  int32 id = 1;
}
